--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "avengers-api",
   "version": "1.0.0",
-  "description": "",
+  "description": "🦸‍♀️ Avengers API a packative Backend Nodejs Assessment Test",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
