--- a/package.json
+++ b/package.json
@@ -11,13 +11,13 @@
   "license": "MIT",
   "dependencies": {
     "express": "^4.17.2",
-    "http-errors": "^2.0.0"
+    "http-errors": "^2.0.0",
+    "md5": "^2.3.0"
   },
   "devDependencies": {
     "babel-cli": "^6.14.0",
     "babel-core": "^6.14.0",
     "babel-eslint": "^6.1.2",
-    "babel-preset-env": "^1.7.0",
     "babel-plugin-transform-async-to-generator": "^6.8.0",
     "babel-plugin-transform-builtin-extend": "^1.1.2",
     "babel-plugin-transform-class-properties": "^6.24.1",
@@ -25,6 +25,7 @@
     "babel-plugin-transform-object-rest-spread": "^6.8.0",
     "babel-plugin-transform-regenerator": "^6.14.0",
     "babel-plugin-transform-runtime": "^6.15.0",
+    "babel-preset-env": "^1.7.0",
     "babel-preset-latest": "^6.14.0",
     "babel-preset-minify": "^0.4.3",
     "eslint": "^8.5.0",
