--- a/package.json
+++ b/package.json
@@ -5,11 +5,12 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node_modules/.bin/nodemon --watch src --exec babel-node -- src/server"
+    "start": "node_modules/.bin/nodemon --watch src --exec babel-node -- src/server -r dotenv/config"
   },
   "author": "Dominik Danninger <dominik@packative.com",
   "license": "MIT",
   "dependencies": {
+    "dotenv": "^10.0.0",
     "express": "^4.17.2",
     "http-errors": "^2.0.0",
     "md5": "^2.3.0"
