--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node_modules/.bin/nodemon --watch src --exec babel-node -- src/server -r dotenv/config"
+    "start": "node_modules/.bin/nodemon --watch src --exec babel-node -- src/server"
   },
   "author": "Dominik Danninger <dominik@packative.com",
   "license": "MIT",
